feat: contextMenu action event

--- a/Jetbrains-Recent-Plugin/Properties/Resources.resx
+++ b/Jetbrains-Recent-Plugin/Properties/Resources.resx
@@ -118,13 +118,13 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="plugin_description" xml:space="preserve">
-    <value>Jetbrains-Recent-Plugin plugin</value>
+    <value>JetBrains-Recent-Plugin plugin</value>
   </data>
   <data name="plugin_name" xml:space="preserve">
-    <value>Jetbrains-Recent-Plugin</value>
+    <value>JetBrains-Recent-Plugin</value>
   </data>
   <data name="plugin_setting" xml:space="preserve">
-    <value>Jetbrains-Recent-Plugin settings</value>
+    <value>JetBrains-Recent-Plugin settings</value>
   </data>
   <data name="plugin_setting_jetbrains_toolbox" xml:space="preserve">
     <value>Default CMD</value>
